--- a/src/input.css
+++ b/src/input.css
@@ -27,6 +27,7 @@
 	src: url("/src/fonts/couture-bld.otf");
 }
 @import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 * {
 	margin: 0;
 	padding: 0;
@@ -40,13 +41,51 @@ body {
 	background: var(--light-primary);
 	color: var(--light-primary-text);
 	min-height: 100vh;
+	overflow-x: hidden;
 }
 
 .section {
-	height: calc(100vh);
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
+}
+
+@layer components {
+	.section {
+		@apply flex  min-h-screen w-full max-w-screen-2xl;
+	}
+
+	.nav__links {
+		@apply font-semibold md:mx-4 md:text-base xl:my-0 xl:mx-8 xl:text-lg;
+	}
+
+	.carousel__indicator {
+		@apply mx-2 rounded-full opacity-40 md:h-3 md:w-3 xl:h-4 xl:w-4;
+	}
+
+	.carousel__slide-text {
+		@apply flex h-fit w-1/2 flex-col items-start xl:py-6 xl:px-5 md:px-4;
+	}
+
+	.carousel__slide-text h2 {
+		@apply w-fit md:text-3xl md:pb-1 xl:pb-3 xl:text-4xl;
+	}
+
+	.carousel__slide-text h2 + p {
+		@apply xl:pb-6 xl:text-xl md:text-base md:pb-4;
+	}
+
+	.carousel__slide-text h3 {
+		@apply w-fit xl:pb-3 xl:text-3xl md:text-2xl;
+	}
+
+	.carousel__slide-text h4 {
+		@apply w-fit xl:text-2xl md:text-lg;
+	}
+
+	.carousel__slide-text h4 + p {
+		@apply xl:pb-4 xl:text-lg md:text-sm md:pb-1;
+	}
 }
 
 /* Navbar */
@@ -81,7 +120,6 @@ nav #logo {
 
 #landing p {
 	font-family: "Rubik", sans-serif;
-	font-size: 1.3rem;
 	margin-right: 3rem;
 	font-weight: 600;
 	color: var(--light-secondary-text);
@@ -89,14 +127,11 @@ nav #logo {
 
 #landing h1 {
 	font-family: Couture, sans-serif;
-	font-size: 4rem;
-	line-height: 3.5rem;
 	color: var(--light-carbon);
 }
 
 #landing h2 {
 	font-family: Couture, sans-serif;
-	font-size: 2rem;
 	color: var(--accent);
 }
 
@@ -176,6 +211,19 @@ nav #logo {
 	animation-duration: 0.3s;
 }
 
+.carousel {
+	height: fit-content;
+}
+
+.carousel__slide {
+	visibility: hidden;
+	display: none;
+}
+
+.carousel__track-container {
+	height: fit-content;
+}
+
 .carousel__button {
 	cursor: pointer;
 	transform: translateY(-50%);
@@ -185,12 +233,17 @@ nav #logo {
 	background-color: var(--light-carbon);
 }
 
-li.current-slide {
-	visibility: visible;
+div.current-slide {
+	visibility: visible !important;
+	display: flex;
 }
 
 button.current-slide {
 	opacity: 100%;
+}
+
+div.carousel__slide img {
+	height: calc(100vh - 8rem)
 }
 
 #projects h2,
