--- a/src/input.css
+++ b/src/input.css
@@ -155,6 +155,11 @@ nav #logo {
 	background: var(--accent);
 }
 
+#projects iframe {
+	width: 100%;
+	min-height: 30rem;
+}
+
 /* Project Carousel */
 @keyframes enterRight {
 	from {
