--- a/src/input.css
+++ b/src/input.css
@@ -59,10 +59,6 @@ h1 {
 	box-sizing: border-box;
 }
 
-.hidden-project {
-	display: none !important;
-}
-
 /* Navbar */
 nav {
 	background: var(--light-primary);
@@ -354,5 +350,11 @@ div.carousel__slide img {
 	#landing-img img {
 		max-width: 500px;
 		max-height: 500px;
+	}
+}
+
+@media only screen and (max-width: 767px) {
+	.hidden-project {
+		display: none !important;
 	}
 }
